@@ -1,3 +1,11 @@
+Fri Jun 17 16:48:29 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>
+
+        * ace/Basic_Types.h:
+
+          Another tweak to ACE_LONG_DOUBLE_FORMAT_SPECIFIER_ASCII's
+          conditional definition to eliminate warnings on FC12
+          and FC15.
+
 Fri Jun 17 12:48:31 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * ace/Basic_Types.h:
